Apache pods and services/17 - Network Policy (Traefik)/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: traefik
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 4200

    - protocol: TCP
      port: 8080

    - protocol: TCP
      port: 3000

    - protocol: TCP
      port: 8000
